--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vuetify": "^1.11.3",
     "core-js": "^3.8.3",
-    "fibers": "^5.0.0",
-    "loader-utils": "^2.0.0",
-    "nuxt": "^2.14.12",
-    "sass-loader": "^11.0.0"
+    "nuxt": "^2.14.12"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
