--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vuetify": "^1.11.3",
     "core-js": "^3.8.3",
+    "firebase": "^8.6.0",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
